added dog complements

--- a/alimentacion.html
+++ b/alimentacion.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>Alimentacion</h1>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere repellat, expedita numquam temporibus perferendis, voluptates quibusdam molestiae earum repellendus iste, hic optio a facilis vel praesentium! Facere, magni voluptates!</div>
-    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere repellat, expedita numquam temporibus perferendis, voluptates quibusdam molestiae earum repellendus iste, hic optio a facilis vel praesentium! Facere, magni voluptates!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere repellat, expedita numquam temporibus perferendis, voluptates quibusdam molestiae earum repellendus iste, hic optio a facilis vel praesentium! Facere, magni voluptates!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere repellat, expedita numquam temporibus perferendis, voluptates quibusdam molestiae earum repellendus iste, hic optio a facilis vel praesentium! Facere, magni voluptates!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod facere repellat, expedita numquam temporibus perferendis, voluptates quibusdam molestiae earum repellendus iste, hic optio a facilis vel praesentium! Facere, magni voluptates!</p>
+        <br>
     <a href="/index.html" class="volverBtn">Volver</a>
 </body>
 </html>
