--- a/razas/razasgrandes.html
+++ b/razas/razasgrandes.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
-    <header><h1>Razas grandes</h1></header>
-    <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa eligendi accusamus repudiandae vero recusandae tempore iusto eaque reiciendis. Quis, facere! Maxime ex nam dolorum natus maiores quasi, tenetur praesentium. Quod.</h1>
+    <header><h1 class="txtShadow">Razas grandes</h1></header>
+    <p>Lorem ipsum dolor, <span class="bigWord">sit amet consectetur</span> adipisicing elit. Ipsa eligendi accusamus repudiandae vero recusandae tempore iusto eaque reiciendis. Quis, facere! Maxime ex nam dolorum natus maiores quasi, tenetur praesentium. Quod.</p>
     <img src="/img/perro-grande.jpg" alt="">
     <br>
     <a href="../razas.html" class="volverBtn">Volver</a>
