--- a/razas/razaspequenas.html
+++ b/razas/razaspequenas.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razas pequenas</title>
     <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/style/dog-accessories.css">
 </head>
 <body>
-    <header><h5>Razas pequenas</h5></header>
+    <header><h1 class="txtShadow">Razas pequenas</h1></header>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima reiciendis molestiae eveniet itaque sunt dolore corrupti. Sed aliquid provident velit rem accusamus placeat voluptate pariatur? Aut eveniet iste minus. Nostrum!</p>
     <img src="/img/perro-pequeno.webp" alt="">
+    <div>
+        <p class="necklace">[Nina]</p>
+        <p class="lagrimaIzq">\</p>    
+        <p class="lagrimaDer">/</p>  
+        <p class="lengua"></p>
+    </div>
     <br>
     <a href="../razas.html" class="volverBtn">Volver</a>
 </body>
