added emojis at page titles

--- a/razas/razaspequenas.html
+++ b/razas/razaspequenas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Razas pequenas</title>
+    <title>🐭 Razas pequenas</title>
     <link rel="stylesheet" href="/style/styles.css">
     <link rel="stylesheet" href="/style/dog-accessories.css">
 </head>
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima reiciendis molestiae eveniet itaque sunt dolore corrupti. Sed aliquid provident velit rem accusamus placeat voluptate pariatur? Aut eveniet iste minus. Nostrum!</p>
     <img src="/img/perro-pequeno.webp" alt="">
     <div>
-        <p class="necklace">[Nina]</p>
+        <p id="necklace">[Nina]</p>
         <p class="lagrimaIzq">\</p>    
         <p class="lagrimaDer">/</p>  
         <p class="lengua"></p>
