--- a/razas.html
+++ b/razas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Razas de perros</title>
+    <title>🐶 Razas de perros</title>
     <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
